* 2007-10-25 - dennis.sieben@open-xchange.com

  - Bugfix ID#9949 L3: Filestore directory layout not physically deleted when context
    is removed, only contained files
  - Bugfix ID#9948 No rollback when deleting a context

* 2007-09-26 - choeger@open-xchange.com

  - Bugfix ID#9614 initconfigdb "mysqladmin: connect to server at 'localhost'
  failed" when database not local

* 2007-09-25 - dennis.sieben@open-xchange.com

  - Bugfix ID#9569 showruntimestats shows "statistictools" as default usage

* 2007-09-10 - choeger@open-xchange.com

- Bugfix ID#8949 Unable to deinstall admin-plugin-hosting package when removing depending
  package (the fix from 2007-08-20 does not really work)

* 2007-09-05 - dennis.sieben@open-xchange.com

  - Bugfix ID#9254 showruntimestats gives NullPointerException

* 2007-08-22 - dennis.sieben@open-xchange.com

  - Bugfix ID#9023 createcontext name should be added to lmappings
  
* 2007-08-22 - choeger@open-xchange.com

  - Bugfix ID#8989 generatempasswd no newline in output
  - Bugfix ID#8991 initconfigdb, return code is always 0
  - Bugfix ID#8853 'listcontexts' searchpattern only works for context id
  - Bugfix ID#9026 listcontextsbyfilestore does not print a error when the given fs does not exist

* 2007-08-21 - dennis.sieben@open-xchange.com

  - Bugfix ID#8543 rename of movedatabasecontext and movefilestorecontext
  - Bugfix ID#9004 unregisterserver operation by name missing
  - Bugfix ID#8993 clts should all be singular
  - Bugfix ID#9007 Context login mappings not validated
  - Bugfix ID#8994 oxinstaller --master-pass should not be needed if --disableauth is in use
  
* 2007-08-20 - choeger@open-xchange.com

  - Bugfix ID#8949 Unable to deinstall admin-plugin-hosting package when removing depending
  package

* 2007-08-16 - dennis.sieben@open-xchange.com

  - Bugfix ID#8917 CLT 'showruntimestats' does not give any output
  
* 2007-08-16 - choeger@open-xchange.com

  - Bugfix ID#8915 Classpath problems with CLTs
